toggle true & false

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -23,3 +23,11 @@ nav{
     text-decoration: none;
     color: white;
 }
+
+
+@media only screen and (max-width: 500px ) {
+
+    .nav-list{
+        display: none;
+    }
+}
