--- a/src/components/NavComponents/SlideNav.css
+++ b/src/components/NavComponents/SlideNav.css
@@ -9,16 +9,16 @@
     width: 50vw;
     height: 100vh;
     background-color: rgba(179, 0, 0, 0.466);
-    position: absolute;
+    position: sticky;
     transition: 0.4s ease-in-out;
 }
 .slide-nav-negative{
-    margin-left: -20vw;
+    margin-left: -50vw;
     display: block;
     width: 50vw;
     height: 100vh;
     background-color: rgba(179, 0, 0, 0.466);
-    position:absolute;
+    position:sticky;
     transition: 0.4s ease-in-out;
 }
 
