--- a/src/components/NavComponents/SlideNav.css
+++ b/src/components/NavComponents/SlideNav.css
@@ -2,13 +2,16 @@
    display: none;
 }
 
+.nav-list2 {
+   display: none;
+}
 
 @media only screen and (max-width: 500px ) {
 .slide-nav{
     display: inline-block;
     width: 50vw;
     height: 100vh;
-    background-color: rgba(179, 0, 0, 0.466);
+    background-color: rgba(179, 0, 0, 0.527);
     position: sticky;
     transition: 0.4s ease-in-out;
 }
@@ -17,13 +20,14 @@
     display: block;
     width: 50vw;
     height: 100vh;
-    background-color: rgba(179, 0, 0, 0.466);
+    background-color: rgba(179, 0, 0, 0);
     position:sticky;
-    transition: 0.4s ease-in-out;
+    transition: 0.7s ease-in-out;
 }
 
 
 .nav-list2 {
+    display: inline-block;
     list-style: none;
 }
 
