--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -6,5 +6,6 @@
 .main{
     width: 100vw;
     height: 90vh;
-    background-color: grey;
+    background: rgb(255,255,255);
+background: linear-gradient(126deg, rgba(255,255,255,1) 0%, rgba(198,255,250,1) 30%, rgba(199,255,221,1) 63%, rgba(183,214,255,1) 100%);
 }
