--- a/src/components/EconomicHistory.css
+++ b/src/components/EconomicHistory.css
@@ -1,13 +1,22 @@
+
+.EconomicHistory{
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+ 
+}
 .inflation{
-    width: 65vw;
+    width: 90%;
     background-color: rgb(233, 233, 233);
     border-radius: 1em;
-    margin-top: 1em;
-
+    /* margin: 5em; */
 }
 
 .inflation2{
-    width: 65vw;
+    width: 90%;
     background-color: rgb(233, 233, 233);
     color: black;
     margin-top: 1em;
