--- a/src/components/EconomicHistory.css
+++ b/src/components/EconomicHistory.css
@@ -8,20 +8,33 @@
     justify-content: center;
  
 }
+
+h1{
+    margin: 2em 0em 1em 0em;
+}
+
 .inflation{
     width: 90%;
-    background-color: rgb(233, 233, 233);
+    background-color: rgb(248, 245, 248);
     border-radius: 1em;
-    /* margin: 5em; */
+    margin: 1em 0em 1.8em 0em;
 }
 
 .inflation2{
     width: 90%;
     background-color: rgb(233, 233, 233);
     color: black;
-    margin-top: 1em;
+    margin: 1em 0em 1.8em 0em;
+}
+
+.inflation3{
+    width: 90%;
+    background-color: rgb(233, 233, 233);
+    color: black;
+    margin: 1em 0em 1.8em 0em;
 }
 
 #pruebas{
-    background-color: rgb(163, 163, 163);
+   background-color: rgb(75,123,324);
+   background-color: rgb(176, 200, 255);
 }
