--- a/src/components/EconomicHistory.css
+++ b/src/components/EconomicHistory.css
@@ -14,6 +14,7 @@ h1{
 }
 
 .inflation{
+    height: 35em;
     width: 90%;
     background-color: rgb(248, 245, 248);
     border-radius: 1em;
@@ -21,6 +22,7 @@ h1{
 }
 
 .inflation2{
+    height: 35em;
     width: 90%;
     background-color: rgb(233, 233, 233);
     color: black;
@@ -28,6 +30,7 @@ h1{
 }
 
 .inflation3{
+    height: 35em;
     width: 90%;
     background-color: rgb(233, 233, 233);
     color: black;
