--- a/src/components/Partidas.css
+++ b/src/components/Partidas.css
@@ -1,4 +1,19 @@
-.partidas{
+.Partidas{
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1{
+    margin: 2em 0em 1em 0em;
+}
+
+.chart1{
     width: 90vw;
-    background-color: rgb(238, 238, 238);
+    background-color: rgb(248, 245, 248);
+    border-radius: 1em;
+    margin: 1em 0em 1.8em 0em;
 }
