--- a/src/components/Partidas.css
+++ b/src/components/Partidas.css
@@ -17,3 +17,27 @@ h1{
     border-radius: 1em;
     margin: 1em 0em 1.8em 0em;
 }
+.chart2{
+    width: 90vw;
+    background-color: rgb(248, 245, 248);
+    border-radius: 1em;
+    margin: 1em 0em 1.8em 0em;
+}
+.chart3{
+    width: 90vw;
+    background-color: rgb(248, 245, 248);
+    border-radius: 1em;
+    margin: 1em 0em 1.8em 0em;
+}
+
+@media only screen and (max-width: 500px) {
+
+
+   h1{
+       font-size: 1.2em;
+   }
+   h2{
+      font-size: 1em;
+   }
+
+}
