--- a/src/components/EconomicHistory.css
+++ b/src/components/EconomicHistory.css
@@ -1,19 +1,51 @@
 
+.EconHis{
+    position: relative;
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1{
+    font-size: 1.5em;
+    margin: 0.5em 0em 0em 0em;
+}
+h2{
+    font-size: 1.3em;
+    margin: 0.4em 0em 0.2em 0em;
+}
+
+.chart1{
+    width: 90vw;
+    background-color: rgb(248, 245, 248);
+    border-radius: 1em;
+    margin: 0em 0em 1.8em 0em;
+}
+.chart2{
+    width: 90vw;
+    background-color: rgb(248, 245, 248);
+    border-radius: 1em;
+    margin: 0em 0em 1.8em 0em;
+}
+.chart3{
+    width: 90vw;
+    background-color: rgb(248, 245, 248);
+    border-radius: 1em;
+    margin: 0em 0em 1.8em 0em;
+}
+
+.prueba{
+    background-color: rgb(143, 0, 200);
+}
+
+
 
 @media only screen and (max-width: 500px) {
 
-    .inflation{
-        height: 50vh;
-        width: 95vw;
-    }
-    .inflation2{
-        height: 50vh;
-        width: 95vw;
-    }
-    .inflation3{
-        height: 50vh;
-        width: 95vw;
-    }
+
    h1{
        font-size: 1.2em;
    }
