--- a/src/components/NavComponents/Nav.css
+++ b/src/components/NavComponents/Nav.css
@@ -1,4 +1,6 @@
 nav{
+    position: fixed;
+    z-index: 5;
     height: 4vh;
     width: 100%;
     display: flex;
@@ -6,7 +8,7 @@ nav{
     /* align-items: center; */
     min-height: 15vh;
     /* min-width: 100vw; */
-    background: rgb(33, 5, 124);
+    background: rgba(33, 5, 124, 0.486);
 }
 
 .nav-list {
