--- a/src/components/NavComponents/SlideNav.css
+++ b/src/components/NavComponents/SlideNav.css
@@ -1,13 +1,16 @@
 .slide-nav{
+   
    display: none;
 }
 
 .nav-list2 {
+    
    display: none;
 }
 
 @media only screen and (max-width: 500px ) {
 .slide-nav{
+    z-index: 2;
     font-size: 1.2em;
     display: inline-block;
     width: 50vw;
@@ -20,10 +23,11 @@
 }
 
 .slide-nav ul{
+    z-index: 2;
     padding-top: 2em;
 }
 .slide-nav li{
-    
+  
     padding-top: 2em;
 }
 
