--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@ body{
 
 .img{
   position: sticky;
+  top: 0;
+  z-index: 0;
   background-image:url("./subNav.jpg") ; 
   background-size: cover;
   width: 100vw;
