--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -8,8 +8,8 @@
     width: 100%;
     height: 100%;
     background-color: rgb(61, 57, 59);
-    backdrop-filter: blur(2px);
-    color: white;
+    backdrop-filter: blur(12px);
+    color: rgba(255, 255, 255, 0);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,15 +24,17 @@
 }
 
 .card:hover .content{
-    color: rgb(47, 24, 24);
+    color: #fff;
+    background-color: rgba(61, 57, 59, 0.233);
 }
+
 .card::before,
 .card::after{
     content:'';
     position: absolute;
     width: 100%;
     height: 50%;
-    background: lightslategray;
+    background: rgb(24, 79, 133);
     z-index: -20;
     transition: all .4s;
 }
