--- a/src/components/EconomicHistory.css
+++ b/src/components/EconomicHistory.css
@@ -11,36 +11,38 @@
     background-color: rgb(34, 31, 31);
 }
 
-h1{
-    font-size: 1.5em;
+b{
+    color: rgb(167, 175, 177);
+    font-size: 2em;
     margin: 0.5em 0em 0em 0em;
 }
 h2{
+    color: rgb(167, 175, 177);
     font-size: 1.3em;
     margin: 0.4em 0em 0.2em 0em;
 }
 
 .chart1{
-    width: 90vw;
-    background-color: rgb(248, 245, 248);
+    width: 85vw;
+    background-color: rgb(21, 5, 39);
     border-radius: 1em;
     margin: 0em 0em 1.8em 0em;
 }
 .chart2{
-    width: 90vw;
-    background-color: rgb(248, 245, 248);
+    width: 85vw;
+    background-color: rgb(21, 5, 39);
     border-radius: 1em;
     margin: 0em 0em 1.8em 0em;
 }
 .chart3{
-    width: 90vw;
-    background-color: rgb(248, 245, 248);
+    width: 85vw;
+    background-color: rgb(32, 9, 58);
     border-radius: 1em;
     margin: 0em 0em 1.8em 0em;
 }
 
 .prueba{
-    background-color: rgb(143, 0, 200);
+    background-color: rgb(144, 0, 0);
 }
 
 
