--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -8,35 +8,25 @@
     align-items: center;
     
 }
-
-/* .title {
-    cursor: pointer;
-    margin:  3em;
-    backdrop-filter: blur(16px);
-    box-shadow:  0 0 30px rgba(0, 0, 0, 0.089);
-    z-index: 20;
-
-transition: 0.5s;
+h1{
+    color: rgb(206, 206, 206);
+    font-size: 2.5em;
+    margin: 2em;
 }
 
-.title:hover {
-    transform: translate(-10px,10px,);
-    border-radius: 1000px;
-    background-color: rgba(165, 42, 42, 0.876);
-    backdrop-filter: blur(15px);
-    box-shadow:  0 0 30px rgba(0, 0, 0, 0.089);
-} */
 
 .title{ 
+    
     width: 45vw;
     height: 35vh;
-    margin: 2em;
+    margin-top: 2em;
     /* width: 250px;
     height: 300px; */
     position: relative;
     cursor: pointer;
 }                       
 .title .content2{
+    
     width: 100%;
     height: 100%;
     background-color: rgb(61, 57, 59);
