--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body{
   z-index: 0;
   background-image:url("./subNav.jpg") ; 
   background-size: cover;
-  width: 100vw;
+  width: 100%;
   height: 40vh;
   /* z-index: 0; */
 }
