--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -12,6 +12,9 @@ h1{
     color: rgb(206, 206, 206);
     font-size: 2.5em;
     margin: 2em;
+    padding: 0.3em;
+    border-top:  3px solid rgb(206, 206, 206);
+    border-bottom:  3px solid rgb(206, 206, 206);
 }
 
 
