--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body{
   position: sticky;
   top: 0;
   z-index: 0;
-  background-image:url("./subNav.jpg") ; 
+  background-image:url("./header2.jpg") ; 
   background-size: cover;
   width: 100%;
   height: 40vh;
