--- a/src/components/MainComponents/Title.css
+++ b/src/components/MainComponents/Title.css
@@ -11,7 +11,7 @@
 
 @media only screen and (max-width: 700px) {
     .chart{
-        width: 80vw;
+        /* width: 80%; */
         height: 25vh;
         background-color: rgba(105, 0, 0, 0);
       
