--- a/src/components/MainComponents/Card3.css
+++ b/src/components/MainComponents/Card3.css
@@ -1,6 +1,7 @@
 article{
+    width: 45vw;
     color: #fff;
-    font-size: 1.5em;
+    font-size: 1.3em;
     margin-top: 4em;
     margin-bottom: 5em;
 }
