--- a/src/components/NavComponents/Nav.css
+++ b/src/components/NavComponents/Nav.css
@@ -26,7 +26,7 @@ nav{
 
 .nav-list a{
     text-decoration: none;
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: 1.4em;
     transition: 0.3s;
 }
