--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,16 @@ body{
   /* z-index: 0; */
 }
 
-
-
-
-
+@media only screen and (max-width: 750px ) {
+  .img{
+    position: sticky;
+    top: 0;
+    z-index: 0;
+    background-image:url("./header7.jpg") ; 
+    background-size: cover;
+    width: 100%;
+    height: 40vh;
+    /* z-index: 0; */
+  }
+}
 
