--- a/src/components/EconomicHistory.css
+++ b/src/components/EconomicHistory.css
@@ -49,11 +49,15 @@ h2{
 
 @media only screen and (max-width: 700px) {
 
+    b{
+        font-size: 1.5em;
+    }
 
    h1{
        font-size: 1.2em;
    }
    h2{
+       margin-top: 1.5em;
       font-size: 1em;
    }
 
