--- a/src/components/MainComponents/Card3.css
+++ b/src/components/MainComponents/Card3.css
@@ -5,3 +5,17 @@ article{
     margin-top: 4em;
     margin-bottom: 5em;
 }
+
+
+@media only screen and (max-width: 700px) {
+
+    article{
+        width: 80vw;
+        color: #fff;
+        font-size: 1em;
+        margin-top: 4em;
+        margin-bottom: 5em;
+    }
+ 
+ }
+ 
