--- a/src/components/NavComponents/Nav.css
+++ b/src/components/NavComponents/Nav.css
@@ -40,12 +40,27 @@ nav{
     display: none;
 }
 
-@media only screen and (max-width: 500px ) {
+@media only screen and (max-width: 750px ) {
 
     .toggleButton{
+        display: flex;
+        flex-direction: row;
+        background-color: rgba(0, 0, 0, 0);
+        width: 6em;
         display: block;
         position: sticky;
-        margin-left: 1em;
+        margin: 0.5rem;
+        font-size: 1em;
+        border-radius: 8px ;
+        border:  1px solid #fff;
+    }
+
+    .toggleButton div{
+        margin: 1em;
+        background-color: rgb(255, 255, 255);
+        width: 3em;
+        height:8%;
+        border-radius: 8px;
     }
 
     .nav-list{
