--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,10 @@
 footer{
-    z-index: 26;
+    position: sticky;
+    position: -webkit-sticky;
+    position: -moz-sticky;
+    position: -o-sticky;
+    position: -ms-sticky; 
+    z-index: 2;
     padding-top: 2em;
     border-top: 1px solid #fff;
     width: 100%;
